--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1
 {
   padding-bottom: 0px;
   margin-bottom: 0px;
-  color:blue;
+  color:#1E90FF;
 }
 
 h3
@@ -43,11 +43,17 @@ h3
   padding-top: 0px;
   margin-top: 0px;
 }
+h4
+{
+  padding: 0px;
+  margin: 0px;
+  color:#1E90FF;
+}
 h5
 {
   padding: 0px;
   margin: 0px;
-  color:blue;
+  color:#1E90FF;
 }
 h6
 {
@@ -59,42 +65,109 @@ table{
 }
 
 #form1{width: 50%;  vertical-align:top;}
-#form2{width: 25%;  vertical-align:top;}
-#form3{width: 75%;  vertical-align:top;}
+#form2{width: 10%;}
+#form3{width: 5%;}
+#form4{width: 15%;  vertical-align:top;}
+#form5{width: 16.66%;  vertical-align:top;}
+#form6{width: 75%;  vertical-align:top;}
+#form7{width: 90%;}
+
+#textform
+{
+  position: absolute;
+  top: 60px;
+  left: 100px;
+  background-color:#1E90FF;
+  height: 60px;
+  width: 100px;
+  color:#FFFFFF;
+  text-align: center;
+  padding-top: 20px;
+  font-size: 30px;
+}
+#textform1
+{
+  position: relative;
+  left: 820px;
+  bottom: 300px;
+  background-color:#1E90FF;
+  height: 150px;
+  width: 150px;
+  color:#FFFFFF;
+  text-align: center;
+  padding-top: 10px;
+  transform:rotate(-70deg);
+  font-size: 30px
+}
+#textform2
+{
+  position: relative;
+  left: 930px;
+  bottom: 450px;
+  background-color:#1E90FF;
+  height: 150px;
+  width: 150px;
+  color:#FFFFFF;
+  text-align: center;
+  padding-top:100px;
+  font-size: 30px;
+  transform:rotate(-70deg);
+}
+#textform3
+{
+  position: relative;
+  left: 894px;
+  bottom: 278px;
+  background-color:#137CFF;
+  height: 47px;
+  width: 113px;
+  transform:rotate(-70deg);
+}
 .main
     {
           position:absolute;
           height: 100%;
           top :0px;
           left: 0px;
-          padding: 30px 60px;
+          padding: 60px 60px;
           overflow: auto;
     }
 
 .main-header
     {
           height: 30px;
-
+          background-color:#f1f1f1;
     }
 
-
+.droite
+    {
+        text-align: right;
+    }
+#tabG
+    {
+        height: 10%;
+    }
+#tabD
+    {
+        height: 5%;
+    }
 .main-container
     {
           height: auto;
           font-size: 22px;
           background-color:#f1f1f1;
+          padding-left: 40px;
     }
 
 progress
 {
   width: 100%;
 }
-
 .main-footer
     {
           height: 30px;
           text-align: center;
-          background-color: lightblue;
+          background-color: #1E90FF;
 
     }
     @media only screen and (max-width: 600px)
