--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ html
 html, body
     {
           display: block;
-          height: 100%;width: 100%;
-          overflow: hidden;
+          height: 100%;
+          width: 100%;
     }
 
 
@@ -28,7 +28,8 @@ ul,li, a
 
 body
 {
-            background-color: #333;
+          height: 100%;
+          background-color: #333;
 }
 
 h1
@@ -72,6 +73,12 @@ table{
 #form6{width: 75%;  vertical-align:top;}
 #form7{width: 90%;}
 
+i
+    {
+        color: #1E90FF;
+        margin-right: 20px;
+    }
+
 #textform
 {
   position: absolute;
@@ -79,7 +86,7 @@ table{
   left: 100px;
   background-color:#1E90FF;
   height: 60px;
-  width: 100px;
+  width: 120px;
   color:#FFFFFF;
   text-align: center;
   padding-top: 20px;
@@ -88,7 +95,7 @@ table{
 #textform1
 {
   position: relative;
-  left: 820px;
+  left: 790px;
   bottom: 300px;
   background-color:#1E90FF;
   height: 150px;
@@ -102,7 +109,7 @@ table{
 #textform2
 {
   position: relative;
-  left: 930px;
+  left: 900px;
   bottom: 450px;
   background-color:#1E90FF;
   height: 150px;
@@ -116,7 +123,7 @@ table{
 #textform3
 {
   position: relative;
-  left: 894px;
+  left: 864px;
   bottom: 278px;
   background-color:#137CFF;
   height: 47px;
@@ -130,7 +137,6 @@ table{
           top :0px;
           left: 0px;
           padding: 60px 60px;
-          overflow: auto;
     }
 
 .main-header
@@ -170,7 +176,7 @@ progress
           background-color: #1E90FF;
 
     }
-    @media only screen and (max-width: 600px)
+/*    @media only screen and (max-width: 600px)
     {
       .main, .main-header, .main-container, .main-footer
           {
@@ -178,10 +184,10 @@ progress
                 max-width: 600px;
                 width: 100%;
           }
-    }
+    }*/
 
     /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) and (max-width: 768px)
+/*@media only screen and (min-width: 600px) and (max-width: 768px)
     {
       .main, .main-header, .main-container, .main-footer
           {
@@ -190,10 +196,10 @@ progress
                 max-width: 768px;
                 width: 100%;
           }
-    }
+    }*/
 
     /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) and (max-width: 992px)
+/*@media only screen and (min-width: 768px) and (max-width: 992px)
     {
       .main, .main-header, .main-container, .main-footer
           {
@@ -202,10 +208,10 @@ progress
                 max-width: 992px;
                 width: 100%;
           }
-    }
+    }*/
 
     /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px)and (max-width: 1200px)
+/*@media only screen and (min-width: 992px)and (max-width: 1200px)
     {
       .main, .main-header, .main-container, .main-footer
           {
@@ -217,10 +223,17 @@ progress
     }
 
     @media only screen and (min-width: 1200px)
-        {
-          .main, .main-header, .main-container, .main-footer
+        {*/
+          .main{
+                display: block;
+                width: auto;
+
+          }
+
+
+          .main-header, .main-container, .main-footer
               {
                     display: block;
-                    width: 100%;
+                    width: 1200px;
               }
-            }
+            /*}*/
